Changes. Trying to get Grid server working.